# latke-ipake

./: Cargo.toml  README.md
latke/: Cargo.toml  build_router_bench.sh
latke/benches/: all.rs
latke/src/: auth_enc.rs  cake.rs  chip.rs  eue_transform.rs  fg_ibke.rs  id_hiding_ake.rs  id_hmqv_c.rs  id_sig_dh.rs  id_sigma_r.rs  ideal_cipher.rs  kc_spake2.rs  latke.rs  lib.rs  sig_dh.rs  spake2.rs
latke/src/chip/: fg_ibke.rs
latke/src/ibke/: fg_ibke.rs  id_hmqv_c.rs  id_sig_dh.rs  id_sigma_r.rs  mod.rs
latke/src/pake/: cpace.rs  kc_spake2.rs  mod.rs
pqcrypto/: Cargo.toml
pqcrypto/pqclean/crypto_sign/dilithium2/clean/: sign.c  sign.h
pqcrypto/pqclean/crypto_sign/dilithium3/clean/: sign.c  sign.h
pqcrypto/pqclean/crypto_sign/dilithium5/clean/: api.h  sign.c  sign.h
pqcrypto/pqcrypto/: Cargo.toml
pqcrypto/pqcrypto-dilithium/src/: dilithium2.rs  dilithium3.rs  dilithium5.rs  ffi.rs
saber-rust/: Cargo.toml
saber-rust/src/: firesaber.rs  generic.rs  lib.rs  lightsaber.rs  non_generic.rs  params.rs  poly.rs  saber.rs
