[package]
name = "latke"
version = "0.1.0"
edition = "2021"

[dependencies]
rand_core = "0.6.4"
saber = { path = "../saber-rust" }
pqcrypto-dilithium = { path = "../pqcrypto/pqcrypto-dilithium" }
hkdf = { version = "0.12", features = ["std"] }
sha2 = "0.10"
lioness = "0.1.2"
blake2 = "0.10"
generic-array = "1.0.0"
rand = "0.8"
curve25519-dalek = { version = "4.1.1", features = ["rand_core", "digest"] }
spake2 = "0.4.0"

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "all"
harness = false
