[package]
name = "latke"
version = "0.1.0"
edition = "2021"

[dependencies]
rand_core = "0.6.4"
saber = { path = "../saber-rust" }
pqcrypto-dilithium = { path = "../pqcrypto/pqcrypto-dilithium" }
pqcrypto-traits = { path = "../pqcrypto/pqcrypto-traits" }
hkdf = { version = "0.12", features = ["std"] }
sha2 = { version = "0.10", features = ["force-soft"] }
blake2 = "0.10"
generic-array = "1.0.0"
rand = "0.8"
curve25519-dalek = { version = "4.1.1", features = ["rand_core", "digest"] }
spake2 = "0.4.0"
subtle = "2.5.0"
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
x25519-dalek = { version = "2.0.0", features = ["static_secrets", "reusable_secrets"] }
rand_chacha = "0.3.1"
crypto-permutation = "0.1.0"
deck-farfalle = { version = "0.1.0", features = ["kravatte"] }
chacha20 = "0.9.1"
pake-cpace = "0.1.7"
base64 = "0.21.7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "all"
harness = false
