[package]
name = "pqcrypto"
description = "Post-Quantum cryptographic primitives"
readme = "README.md"
version = "0.17.0"
authors = ["Thom Wiggers <thom@thomwiggers.nl>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rustpq/"
repository = "https://github.com/rustpq/pqcrypto/"
keywords = ["cryptography", "post-quantum", "security"]
categories = ["cryptography"]

[dependencies]
pqcrypto-traits = { path = "../pqcrypto-traits", version = "0.3.5" }
pqcrypto-dilithium = { path = "../pqcrypto-dilithium", version = "0.5.0", optional = true }

[features]
default = ["pqcrypto-dilithium"]
cryptographically-insecure = []
serialization = ["pqcrypto-dilithium/serialization"]

[badges]
travis-ci = { repository = "rustpq/pqcrypto", branch = "master" }
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
